--- a/views/main.erb
+++ b/views/main.erb
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="page-header" align=center>
-    <h1> El PAU ES UN CHUPA CULOS </h1>
+    <h1> VIVA EL BETIS </h1>
   </div>
 
   <% if ENV["DATABASE_SERVICE_HOST"].nil? && ENV["DATABASE_TEST_SERVICE_HOST"].nil? %>
